Move github Button in stack menu to the right to avoid hidding text behind it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -520,6 +520,7 @@ a.hoverline:hover {
 
 .card-action a.btn-floating {
   margin-bottom: 0;
+  float:right;
 }
 
 #contact a:not(.btn-floating) {
